--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
     box-sizing: border-box;
     background: #ffc600;
     font-size: 20px;
-    font-weight: 200;
+    font-weight: 100;
 }
 
 body {
@@ -20,6 +20,7 @@ body {
 .panels {
     min-height: 100vh;
     overflow: hidden;
+    display: flex;
 }
 
 .panel {
@@ -37,6 +38,11 @@ body {
     font-size: 20px;
     background-size: cover;
     background-position: center;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .panel1 {
@@ -64,6 +70,23 @@ body {
     margin: 0;
     width: 100%;
     transition: transform 0.5s;
+    flex: 1 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.panel>*:first-child {
+    transform: translateY(-100%)
+}
+.panel.open-active>*:first-child {
+    transform: translateY(0)
+}
+.panel>*:last-child {
+    transform: translateY(100%)
+}
+.panel.open-active>*:last-child {
+    transform: translateY(0)
 }
 
 .panel p {
@@ -81,4 +104,5 @@ body {
 
 .panel.open {
     font-size: 40px;
+    flex: 5;
 }
